# multi-pc-sync

./: .clangd  .gitignore  .gitmodules  0001-Refactor-output-formatting-to-use-r-n-instead-of-n-r.patch  CMakeLists.txt  LICENSE  README.md  add_termcolor.py  client.cpp  debug_sync.py  debug_tmux.sh  directory_indexer.cpp  directory_indexer.h  file.proto  folder.proto  growing_buffer.cpp  growing_buffer.h  human_readable.h  main.cpp  multi-pc-sync.config  network_thread.h  program_options.cpp  program_options.h  requirements.txt  server.cpp  setup_debug_env.sh  simple_debug.py  socket_helpers.cpp  socket_helpers.h  sync_command.cpp  sync_command.h  tcp_command.cpp  tcp_command.h  unit_test.py
hash/: hash.mk  md5_wrapper.cpp  md5_wrapper.h
tcp_command/: tcp_command.h  tcp_command.mk  tcp_command_base.cpp  tcp_command_derived.cpp  tcp_command_utils.cpp
testing/: debug_tmux.sh  debug_tmux_utils.sh  run_debug.sh  scenarios.sh  unit_test.py  visualize_test_report.sh
